--- a/src/index.html
+++ b/src/index.html
@@ -65,21 +65,21 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./img/lista1.jpg" class="d-block w-100" alt="...">
+                <img src="./img/dewdrops.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>First slide label</h5>
                     <p>Some representative placeholder content for the first slide.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./img/lista2.png" class="d-block w-100" alt="...">
+                <img src="./img/hd-wallpaper.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
                     <p>Some representative placeholder content for the second slide.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./img/list3.png" class="d-block w-100" alt="...">
+                <img src="./img/lotus.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
                     <p>Some representative placeholder content for the third slide.</p>
@@ -100,7 +100,7 @@
     <!-- cards -->
     <div class="card-group">
         <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="./img/list.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
@@ -109,7 +109,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="./img/exam.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -117,7 +117,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="./img/checklist.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
