delete button working

--- a/src/form.html
+++ b/src/form.html
@@ -41,6 +41,7 @@
         <th scope="col">Name</th>
         <th scope="col">Surname</th>
         <th scope="col">Email</th>
+        <th scope="col">Eliminar</th>
       </tr>
     </thead>
     <tbody>
@@ -49,17 +50,20 @@
         <td>Mark</td>
         <td>Otto</td>
         <td>@mdo</td>
+        <td><button>Eliminar</button></td>
       </tr>
       <tr>
         <th scope="row">2</th>
         <td>Jacob</td>
         <td>Thornton</td>
         <td>@fat</td>
+        <td><button>Eliminar</button></td>
       </tr>
       <tr>
         <th scope="row">3</th>
         <td colspan="2">Larry the Bird</td>
         <td>@twitter</td>
+        <td><button>Eliminar</button></td>
       </tr>
     </tbody>
   </table>
