--- a/src/form.html
+++ b/src/form.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  
   <form action="#" class="form" id="form">
     <div class="mb-3">
       <label for="exampleInputName1" class="form-label">Name</label>
@@ -27,8 +28,8 @@
       <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
     </div>
     <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" name="password">
+      <label for="exampleInputScore1" class="form-label">Score</label>
+      <input type="number" class="form-control" id="exampleInputScore1" name="score">
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
@@ -41,7 +42,9 @@
         <th scope="col">Name</th>
         <th scope="col">Surname</th>
         <th scope="col">Email</th>
-        <th scope="col">Eliminar</th>
+        <th scope="col">Score</th>
+        <th scope="col">Delete</th>
+        <th scope="col">Edit</th>
       </tr>
     </thead>
     <tbody>
@@ -50,23 +53,35 @@
         <td>Mark</td>
         <td>Otto</td>
         <td>@mdo</td>
-        <td><button>Eliminar</button></td>
+        <td>5</td>
+        <td><button>Delete</button></td>
+        <td><button>Edit</button></td>
       </tr>
       <tr>
         <th scope="row">2</th>
         <td>Jacob</td>
         <td>Thornton</td>
         <td>@fat</td>
-        <td><button>Eliminar</button></td>
+        <td>7</td>
+        <td><button>Delete</button></td>
+        <td><button>Edit</button></td>
       </tr>
       <tr>
         <th scope="row">3</th>
         <td colspan="2">Larry the Bird</td>
         <td>@twitter</td>
-        <td><button>Eliminar</button></td>
+        <td>8</td>
+        <td><button>Delete</button></td>
+        <td><button>Edit</button></td>
       </tr>
     </tbody>
   </table>
+  <div class="buttons">
+    <button type="button" class="btn btn-primary btn-lg btn-block">Load List</button>
+    <button type="button" class="btn btn-primary btn-lg btn-block">Save List</button>
+  </div>
+
+  
   <script src="./javaScript/index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
