--- a/src/form.html
+++ b/src/form.html
@@ -6,13 +6,54 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Form</title>
+  <link rel="shortcut icon" href="./img/beewheel-icon.png">
   <link rel="stylesheet" href="./styles/form.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
 <body>
-  
+  <nav class="navbar navbar-expand-lg" style="background-color: #804000;">
+    <div class="container-fluid">
+      <a class="navbar-brand text-light" href="#">Bee Manager</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active text-light" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="form.html">Form</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Bee List
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item text-light" href="#">Action</a></li>
+              <li><a class="dropdown-item text-light" href="#">Another action</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item text-light" href="#">Something else here</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled text-light">Wheel</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success text-light" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+  <!-- form -->
   <form action="#" class="form" id="form">
     <div class="mb-3">
       <label for="exampleInputName1" class="form-label">Name</label>
@@ -31,7 +72,7 @@
       <label for="exampleInputScore1" class="form-label">Score</label>
       <input type="number" class="form-control" id="exampleInputScore1" name="score">
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn">Submit</button>
   </form>
 
   <!-- table -->
@@ -77,11 +118,11 @@
     </tbody>
   </table>
   <div class="buttons">
-    <button type="button" class="btn btn-primary btn-lg btn-block">Load List</button>
-    <button type="button" class="btn btn-primary btn-lg btn-block">Save List</button>
+    <button type="button" class="btn btn-lg btn-block">Load List</button>
+    <button type="button" class="btn btn-lg btn-block">Save List</button>
   </div>
 
-  
+
   <script src="./javaScript/index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
