--- a/src/form.html
+++ b/src/form.html
@@ -76,7 +76,7 @@
   </form>
 
   <!-- table -->
-  <table class="table mt-5" id="table">
+  <table class="table" id="table">
     <thead>
       <tr>
         <th scope="col">#</th>
