--- a/src/form.html
+++ b/src/form.html
@@ -43,7 +43,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled text-light">Wheel</a>
+            <a class="nav-link text-light" href="wheel.html">Wheel</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
@@ -113,7 +113,7 @@
         <td>@twitter</td>
         <td>8</td>
         <td><button>Delete</button></td>
-        <td><button>Edit</button></td>
+        <td><button onclick="edit()">Edit</button></td>
       </tr>
     </tbody>
   </table>
