--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Material Design for Bootstrap</title>
+    <title>Bee Manager</title>
     <!-- MDB icon -->
     <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
     <!-- Font Awesome -->
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active text-light" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-light" href="form.html">Form</a>
@@ -59,7 +59,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled text-light">Wheel</a>
+                        <a class="nav-link text-light" href="wheel.html">Wheel</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -116,21 +116,21 @@
     <!-- cards -->
     <div class="card-group">
         <div class="card border-0">
-            <img src="./img/Bee2.png" class="card-img-top" alt="...">
+            <img src="./img/form-img.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Manage</h5>
                 <p class="card-text">Work with our tools to manage your data, add, edit and delete easily..</p>
             </div>
         </div>
         <div class="card border-0">
-            <img src="./img/Bee2.png" class="card-img-top" alt="...">
+            <img src="./img/table-img.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Lists</h5>
                 <p class="card-text">Organize your lists to work with your data.</p>
             </div>
         </div>
         <div class="card border-0">
-            <img src="./img/Bee2.png" class="card-img-top" alt="...">
+            <img src="./img/wheel-img.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Wheel</h5>
                 <p class="card-text">Choose a random element.</p>
