--- a/src/index.html
+++ b/src/index.html
@@ -146,7 +146,7 @@
             <!-- Facebook -->
             <a
               class="btn text-white btn-floating m-1"
-              style="background-color: #3b5998;"
+              style="background-color:#8A5728;"
               href="#!"
               role="button"
               ><i class="fab fa-facebook-f"></i
@@ -155,7 +155,7 @@
             <!-- Twitter -->
             <a
               class="btn text-white btn-floating m-1"
-              style="background-color: #55acee;"
+              style="background-color:#E48400;"
               href="#!"
               role="button"
               ><i class="fab fa-twitter"></i
@@ -164,7 +164,7 @@
             <!-- Google -->
             <a
               class="btn text-white btn-floating m-1"
-              style="background-color: #dd4b39;"
+              style="background-color: #E96C11;"
               href="#!"
               role="button"
               ><i class="fab fa-google"></i
@@ -173,7 +173,7 @@
             <!-- Instagram -->
             <a
               class="btn text-white btn-floating m-1"
-              style="background-color: #ac2bac;"
+              style="background-color:#F6AE2D;"
               href="#!"
               role="button"
               ><i class="fab fa-instagram"></i
@@ -182,7 +182,7 @@
             <!-- Linkedin -->
             <a
               class="btn text-white btn-floating m-1"
-              style="background-color: #0082ca;"
+              style="background-color: #882D17;"
               href="#!"
               role="button"
               ><i class="fab fa-linkedin-in"></i
